# dos-like-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
